--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,10 +7,23 @@ code {
 pre {
     background-color: #1b1919 !important;
     border-radius: 4px !important;
-    overflow-x: auto !important;
+    overflow-x: auto;
     white-space: pre !important;
 }
 
 pre code span:first-child {
     padding: 0px 4px !important;
+}
+
+@media only screen and (max-width: 800px) {
+    main {
+        width: 100%;
+        max-width: 100%;
+        padding-left: 5px !important;
+        padding-right: 5px !important;
+    }
+
+    #sidebar {
+        margin-bottom: 20px !important;
+    }
 }
