--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,7 +56,7 @@
         </article>
     {{ $limit := .Site.Params.read_more.length_limit }}
     {{ $pages := where .Site.RegularPages "Section" "posts" }}
-    {{ range (.Paginate $pages (or .Site.Params.posts_per_page 5)).Pages }}
+    {{ range $index, $page := (.Paginate $pages (or .Site.Params.posts_per_page 5)).Pages }}
         <article>
             <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
             {{ $tags := .Params.tags }}
@@ -76,10 +76,13 @@
             </div>
             {{ end }}
             <div class="post-content readmore">
-                <div id="text-content">{{ ( .ContentWithoutSummary | safeHTML ) | truncate $limit }}</div>
-                <div id="full-content" style="display: none;">{{ .ContentWithoutSummary | safeHTML }}</div>
-                {{ if gt (len (.ContentWithoutSummary | safeHTML)) $limit }}
-        <summary id="read-more-btn" onclick="toggleReadMore()" style="display: inline;">{{ .Site.Params.read_more.text.more }}</summary>
+                <!-- subtracting one because of how truncate works -->
+                {{ if gt (sub (len ((.ContentWithoutSummary | safeHTML) | plainify)) 1) $limit }}
+                <div class="text-content" id="text-content-{{ $index }}">{{ ( .ContentWithoutSummary | safeHTML) | truncate $limit }}</div>
+                <div class="full-content" id="full-content-{{ $index }}" style="display: none;">{{ .ContentWithoutSummary | safeHTML }}</div>
+                <summary id="read-more-btn" onclick="toggleReadMore({{ $index }})" style="display: inline;">{{ .Site.Params.read_more.text.more }}</summary>
+                {{ else }} 
+                <div id="full-content">{{ .ContentWithoutSummary | safeHTML }}</div>
                 {{ end }}
             </div>
             {{ with .Params.ending_images }}
@@ -93,19 +96,19 @@
     {{ end }}
     {{ template "_internal/pagination.html" . }}
     <script>
-    function toggleReadMore() {
-        var fullContent = document.getElementById("full-content");
-        var btnText = document.getElementById("read-more-btn");
-        var textContent = document.getElementById("text-content");
+    function toggleReadMore(index) {
+        var fullContent = document.getElementById("full-content-" + index);
+        var textContent = document.getElementById("text-content-" + index);
+        var btnText = textContent.nextElementSibling.nextElementSibling;
 
         if (fullContent.style.display === "none") {
             textContent.style.display = "none";
             fullContent.style.display = "inline";
-            btnText.innerHTML = {{ .Site.Params.read_more.text.less }};
+            btnText.innerHTML = "{{ .Site.Params.read_more.text.less }}";
         } else {
             textContent.style.display = "inline";
             fullContent.style.display = "none";
-            btnText.innerHTML = {{ .Site.Params.read_more.text.more }};
+            btnText.innerHTML = "{{ .Site.Params.read_more.text.more }}";
         }
     }
     </script>
