--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,6 +25,7 @@
 	{{ end }}
 	</div>
 	{{ end }}
+	{{ partial "counter.html" . }}
 </article>
 <article style="max-width:1024px;margin-left:auto;margin-right:auto;">
 	{{ partial "disqus.html" . }}
