--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,6 +15,38 @@ pre code span:first-child {
     padding: 0px 4px !important;
 }
 
+.container {
+    background-color: var(--bg2-color);
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid var(--border-color);
+    box-shadow: 0 4px 10px var(--post-shadow-color);
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+}
+  
+.container::before {
+    content: "";
+    background-image: var(--list-style-image);
+    background-size: 40px;
+    opacity: 0.2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.view-text, .like-text {
+    color: var(--text-color);
+    font-size: 1.1em;
+    margin: 10px 0;
+}
+
 @media only screen and (max-width: 800px) {
     main {
         width: 100%;
