--- a/layouts/index.html
+++ b/layouts/index.html
@@ -78,9 +78,10 @@
             <div class="post-content readmore">
                 <!-- subtracting one because of how truncate works -->
                 {{ if gt (sub (len ((.ContentWithoutSummary | safeHTML) | plainify)) 1) $limit }}
-                <div class="text-content" id="text-content-{{ $index }}">{{ ( .ContentWithoutSummary | safeHTML) | truncate $limit }}</div>
-                <div class="full-content" id="full-content-{{ $index }}" style="display: none;">{{ .ContentWithoutSummary | safeHTML }}</div>
-                <summary id="read-more-btn" onclick="toggleReadMore({{ $index }})" style="display: inline;">{{ .Site.Params.read_more.text.more }}</summary>
+                <p>...</p>
+                <!-- <div class="text-content" id="text-content-{{ $index }}">{{ ( .ContentWithoutSummary | safeHTML) | truncate $limit }}</div>
+                <div class="full-content" id="full-content-{{ $index }}" style="display: none;">{{ .ContentWithoutSummary | safeHTML }}</div> -->
+                <a id="read-more-btn" href="{{ .RelPermalink }}" style="text-decoration: none;"><b>{{ .Site.Params.read_more.text.more }}</b></a>
                 {{ else }} 
                 <div id="full-content">{{ .ContentWithoutSummary | safeHTML }}</div>
                 {{ end }}
@@ -95,22 +96,5 @@
         </article>
     {{ end }}
     {{ template "_internal/pagination.html" . }}
-    <script>
-    function toggleReadMore(index) {
-        var fullContent = document.getElementById("full-content-" + index);
-        var textContent = document.getElementById("text-content-" + index);
-        var btnText = textContent.nextElementSibling.nextElementSibling;
-
-        if (fullContent.style.display === "none") {
-            textContent.style.display = "none";
-            fullContent.style.display = "inline";
-            btnText.innerHTML = "{{ .Site.Params.read_more.text.less }}";
-        } else {
-            textContent.style.display = "inline";
-            fullContent.style.display = "none";
-            btnText.innerHTML = "{{ .Site.Params.read_more.text.more }}";
-        }
-    }
-    </script>
     </main>
 {{ end }}
