--- a/layouts/partials/style.css
+++ b/layouts/partials/style.css
@@ -34,7 +34,7 @@ body {
     background-color: var(--bg-color);
     background-image: var(--site-bg);
     margin: 0;
-    font-size: 15px;
+    font-size: 14px;
     color: var(--text-color);
 }
 
@@ -345,6 +345,13 @@ header h1 a:hover {
 .small-text {
     font-size: 11px;
     text-shadow: var(--bg-color) 1px 1px;
+}
+
+.article-single {
+    font-size: 16px;
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* these are the mobile styles! */
