--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,9 +1,20 @@
 {{ define "main" }}
+    {{ if .IsTranslated }}
+    <nav class="languages links">
+        <ul>
+        {{ range .Translations }}
+        <li>
+            <a href="{{ .RelPermalink }}">{{ or (.Language.LanguageName) (.Language.Lang) }}</a>
+        </li>
+        {{ end }}
+        </ul>
+    </nav>
+    {{ end }}
     <div id="content">
     <aside id="sidebar">
         <div id="avatar">
             {{ with .Site.GetPage "section" "/sidebar/_index.md" }}
-            <img class="flower" src="{{ .Params.icon_path }}">
+            <img class="flower" src="{{ index .Params "icon-path" }}">
             {{ end }}
         </div>
         
@@ -14,13 +25,13 @@
         </div>
         
         <div class="small-box">
-            {{ with .Site.GetPage "section" "/sidebar/basic_info.md" }}
+            {{ with .Site.GetPage "section" "/sidebar/basic-info.md" }}
                 {{ .Content | safeHTML }}
             {{ end }}
             </ul>
         </div>
         
-        <nav>
+        <nav class="links">
             <ul>
             {{ with .Site.GetPage "section" "/sidebar/_index.md" }}
             {{ range .Params.links }}
@@ -32,7 +43,7 @@
     </aside>
     <main>
         <article id="top" class="clearfix">
-            {{ with .Site.GetPage "section" "/welcome_header/_index.md" }}
+            {{ with .Site.GetPage "section" "/welcome-header/_index.md" }}
             <section>
             <div class="img-right">
                 <img src="{{ .Params.image }}">
@@ -54,21 +65,27 @@
             </section>
             {{ end }}
         </article>
-    {{ $limit := .Site.Params.read_more.length_limit }}
+    {{ $limit := index (index .Site.Params "read-more") "length-limit" }}
     {{ $pages := where .Site.RegularPages "Section" "posts" }}
-    {{ range $index, $page := (.Paginate $pages (or .Site.Params.posts_per_page 5)).Pages }}
+    {{ range $index, $page := (.Paginate $pages (or (index .Site.Params "posts-per-page") 5)).Pages }}
         <article>
+            {{- if (index .Params "table-of-contents") }}
+            <button id="post-toc-btn-{{ $index }}" class="dropbox-btn" onclick="toggleDropbox('post-toc-{{ $index }}')" >☰</button>
+            <div id="post-toc-{{ $index }}" class="dropbox-content table-of-contents float">
+                {{ partial "toc.html" $page }}
+            </div>
+            {{ end }}
             <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
-            {{ $tags := .Params.tags }}
+            {{ $tags := $page.Params.tags }}
             tags:
             {{ range $index, $tag := .Params.tags }}
-            <a href="/tags/{{ $tag }}">{{ $tag }}</a>{{ if ne $index (sub ($tags | len) 1) }},{{ end }}
+            <a href="{{ relLangURL (printf "/tags/%s" $tag) }}">{{ $tag }}</a>{{ if ne $index (sub ($tags | len) 1) }},{{ end }}
             {{ end }}
             <div class="post-header">
-                @{{ .Params.author }} <span class="timestamp">{{ .Date.Format "02/01/2006" }}</span>
+                @{{ $page.Params.author }} <span class="timestamp">{{ $page.Date.Format "02/01/2006" }}</span>
             </div>
             <p>{{ .Summary }}</p>
-            {{ with .Params.title_images }}
+            {{ with index $page.Params "title-images" }}
             <div class="photosetx2">
                 {{ range first 2 . }}
                 <a href="{{ . }}" target="_blank"><img src="{{ . }}"></a>
@@ -77,16 +94,14 @@
             {{ end }}
             <div class="post-content readmore">
                 <!-- subtracting one because of how truncate works -->
-                {{ if gt (sub (len ((.ContentWithoutSummary | safeHTML) | plainify)) 1) $limit }}
-                <p>...</p>
-                <!-- <div class="text-content" id="text-content-{{ $index }}">{{ ( .ContentWithoutSummary | safeHTML) | truncate $limit }}</div>
-                <div class="full-content" id="full-content-{{ $index }}" style="display: none;">{{ .ContentWithoutSummary | safeHTML }}</div> -->
-                <a id="read-more-btn" href="{{ .RelPermalink }}" style="text-decoration: none; color: palevioletred"><b>{{ .Site.Params.read_more.text.more }}</b></a>
+                {{ if gt (sub (len (( $page.ContentWithoutSummary | safeHTML) | plainify)) 1) $limit }}
+                <div id="text-content">{{ ( .ContentWithoutSummary | safeHTML) | truncate $limit }}</div>
+                <a href="{{ .RelPermalink }}"><summary id="read-more-btn" onclick="toggleReadMore()" style="display: inline;">{{ (index .Site.Params "read-more").text.more }}</summary></a>
                 {{ else }} 
-                <div id="full-content">{{ .ContentWithoutSummary | safeHTML }}</div>
+                <div id="full-content">{{ $page.ContentWithoutSummary | safeHTML }}</div>
                 {{ end }}
             </div>
-            {{ with .Params.ending_images }}
+            {{ with index $page.Params "ending-images" }}
             <div class="photosetx3">
                 {{ range first 3 . }}
                 <a href="{{ . }}" target="_blank"><img src="{{ . }}"></a>
