--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,9 @@
     <aside id="sidebar">
         <div id="avatar">
             {{ with .Site.GetPage "section" "/sidebar/_index.md" }}
-            <img class="flower" src="{{ index .Params "icon-path" }}">
+                {{/* Render both images, CSS will control visibility */}}
+                <img class="flower avatar-light" src="{{ index .Params "light_icon_path" }}" alt="Avatar Light">
+                <img class="flower avatar-dark" src="{{ index .Params "dark_icon_path" }}" alt="Avatar Dark">
             {{ end }}
         </div>
         
